--- a/dynatrace-operator/chart/default/templates/Common/webhook/validatingwebhookconfiguration.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/webhook/validatingwebhookconfiguration.yaml
@@ -27,7 +27,7 @@ webhooks:
     clientConfig:
       service:
         name: dynatrace-webhook
-        namespace: dynatrace
+        namespace: {{ .Release.Namespace }}
         path: /validate
     rules:
       - operations:
@@ -35,7 +35,7 @@ webhooks:
         apiGroups:
           - dynatrace.com
         apiVersions:
-          - v1alpha1
+          - v1beta1
         resources:
           - dynakubes
     name: webhook.dynatrace.com
