--- a/dynatrace-operator/chart/default/templates/Common/activegate/serviceaccount-activegate.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/activegate/serviceaccount-activegate.yaml
@@ -11,11 +11,12 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift, google, or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: dynatrace-data-ingest
+  name: dynatrace-activegate
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "dynatrace-operator.labels" . | nindent 4 }}
