Use go templating for common files, Update year

--- a/dynatrace-operator/chart/default/templates/Common/webhook/clusterrole-webhook.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/webhook/clusterrole-webhook.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Dynatrace LLC
+# Copyright 2021 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -28,6 +28,7 @@ rules:
       - get
       - list
       - watch
+      - update
   - apiGroups:
       - ""
     resources:
