--- a/dynatrace-operator/chart/default/templates/Common/webhook/validatingwebhookconfiguration.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/webhook/validatingwebhookconfiguration.yaml
@@ -1,4 +1,4 @@
-# Copyright 2020 Dynatrace LLC
+# Copyright 2021 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -31,6 +31,7 @@ webhooks:
         path: /validate
     rules:
       - operations:
+          - CREATE
           - UPDATE
         apiGroups:
           - dynatrace.com
@@ -39,5 +40,6 @@ webhooks:
         resources:
           - dynakubes
     name: webhook.dynatrace.com
+    timeoutSeconds: 2
     sideEffects: None
 {{end}}
