--- a/dynatrace-operator/chart/default/templates/Common/operator/serviceaccount-operator.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/operator/serviceaccount-operator.yaml
@@ -1,4 +1,4 @@
-# Copyright 2020 Dynatrace LLC
+# Copyright 2021 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,14 +12,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
-{{- if eq .Values.platform "openshift"}}
+{{ $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: dynatrace-webhook
+  name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{ include "dynatrace-operator.labels" . | nindent 4 }}
+    
+{{ if or (eq .Values.platform "openshift") (eq .Values.platform "openshift-3-11") }}
 imagePullSecrets:
-  - name: redhat-connect
-  - name: redhat-connect-sso
+- name: redhat-connect
+- name: redhat-connect-sso
 {{ end }}
+
