--- a/dynatrace-operator/chart/default/templates/Common/webhook/serviceaccount-webhook.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/webhook/serviceaccount-webhook.yaml
@@ -1,4 +1,4 @@
-# Copyright 2020 Dynatrace LLC
+# Copyright 2021 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -11,15 +11,18 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
-{{- if eq .Values.platform "openshift-3-11"}}
+{{- if ne .Values.platform "openshift-3-11"}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: dynatrace-dynakube-oneagent
+  name: dynatrace-webhook
   namespace: {{ .Release.Namespace }}
+
+{{ if eq .Values.platform "openshift" }}
 imagePullSecrets:
-  - name: redhat-connect
-  - name: redhat-connect-sso
+- name: redhat-connect
+- name: redhat-connect-sso
 {{ end }}
+
+{{end}}
