--- a/dynatrace-operator/chart/default/tests/Common/webhook/serviceaccount-webhook_test.yaml
+++ b/dynatrace-operator/chart/default/tests/Common/webhook/serviceaccount-webhook_test.yaml
@@ -1,13 +1,19 @@
-suite: test serviceaccount for oneagent
+suite: test serviceaccount for webhook
 templates:
-  - Openshift/oneagent/serviceaccount-oneagent.yaml
+  - Common/webhook/serviceaccount-webhook.yaml
 tests:
-  - it: should not exist if platform is not openshift
+  - it: should exist
     set:
       platform: kubernetes
     asserts:
-      - hasDocuments:
-          count: 0
+      - isKind:
+          of: ServiceAccount
+      - equal:
+          path: metadata.name
+          value: dynatrace-webhook
+      - equal:
+          path: metadata.namespace
+          value: NAMESPACE
 
   - it: should exist
     set:
@@ -17,7 +23,7 @@ tests:
           of: ServiceAccount
       - equal:
           path: metadata.name
-          value: dynatrace-dynakube-oneagent
+          value: dynatrace-webhook
       - equal:
           path: metadata.namespace
           value: NAMESPACE
