--- a/dynatrace-operator/chart/default/values.yaml
+++ b/dynatrace-operator/chart/default/values.yaml
@@ -26,6 +26,9 @@ trustedCAs: ""
 networkZone: ""
 enableIstio: false
 
+# Only works for applicationMonitoring and cloudNativeFullStack
+namespaceSelector: {}
+
 autoCreateSecret: true
 apiToken: ""
 paasToken: ""
@@ -58,7 +61,6 @@ cloudNativeFullStack:
   enabled: false
   version: ""
   initResources: {}
-  namespaceSelector: {}
   nodeSelector: ""
   tolerations: [ ]
   oneAgentResources: { }
@@ -75,7 +77,6 @@ applicationMonitoring:
   version: ""
   useCSIDriver: false
   initResources: {}
-  namespaceSelector: {}
 
 hostMonitoring:
   enabled: false
