--- a/dynatrace-operator/chart/default/templates/Common/customresource-dynakube.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/customresource-dynakube.yaml
@@ -1,4 +1,4 @@
-# Copyright 2020 Dynatrace LLC
+# Copyright 2021 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -55,6 +55,10 @@ spec:
 
   {{- if .Values.enableIstio }}
   enableIstio: {{ .Values.enableIstio }}
+  {{- end }}
+
+  {{- if .Values.namespaceSelector }}
+  namespaceSelector: {{ .Values.namespaceSelector | toYaml | nindent 4 }}
   {{- end }}
 
   {{- if .Values.activeGate }}
@@ -158,10 +162,6 @@ spec:
       {{- if .Values.cloudNativeFullStack.initResources }}
       initResources: {{ .Values.cloudNativeFullStack.initResources | toYaml | nindent 10 }}
       {{- end }}
-
-      {{- if .Values.cloudNativeFullStack.namespaceSelector }}
-      namespaceSelector: {{ .Values.cloudNativeFullStack.namespaceSelector | toYaml | nindent 10 }}
-      {{- end }}
     {{- end }}
     {{- end }}
 
@@ -180,10 +180,6 @@ spec:
 
       {{- if .Values.applicationMonitoring.initResources }}
       initResources: {{ .Values.applicationMonitoring.initResources | toYaml | nindent 10 }}
-      {{- end }}
-
-      {{- if .Values.applicationMonitoring.namespaceSelector }}
-      namespaceSelector: {{ .Values.applicationMonitoring.namespaceSelector | toYaml | nindent 10 }}
       {{- end }}
     {{- end }}
     {{- end }}
