--- a/dynatrace-operator/chart/default/templates/Common/operator/deployment-operator.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/operator/deployment-operator.yaml
@@ -1,4 +1,4 @@
-# Copyright 2020 Dynatrace LLC
+# Copyright 2021 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,7 +13,6 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
-{{- if eq .Values.platform "openshift"}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -28,7 +27,7 @@ spec:
     matchLabels:
       name: {{ .Release.Name }}
   strategy:
-    type: Recreate
+    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -51,8 +50,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+            {{ if or (eq .Values.platform "openshift") (eq .Values.platform "openshift-3-11") }}
             - name: RELATED_IMAGE_DYNATRACE_ONEAGENT
               value: registry.connect.redhat.com/dynatrace/oneagent
+            {{ end }}
           ports:
             - containerPort: 8080
               name: metrics
@@ -64,7 +65,7 @@ spec:
               memory: 64Mi
             limits:
               cpu: 100m
-              memory: 256Mi
+              memory: 128Mi
           readinessProbe:
             httpGet:
               path: /healthz
@@ -83,6 +84,7 @@ spec:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
+            {{ if eq .Values.platform "openshift-3-11" }}
               - matchExpressions:
                   - key: beta.kubernetes.io/arch
                     operator: In
@@ -93,6 +95,7 @@ spec:
                     operator: In
                     values:
                       - linux
+            {{ else }}
               - matchExpressions:
                   - key: kubernetes.io/arch
                     operator: In
@@ -103,6 +106,7 @@ spec:
                     operator: In
                     values:
                       - linux
+            {{ end }}
       serviceAccountName: {{ .Release.Name }}
       {{- if .Values.operator.customPullSecret }}
       imagePullSecrets:
@@ -114,4 +118,3 @@ spec:
       {{- if .Values.operator.tolerations }}
       tolerations: {{- toYaml .Values.operator.tolerations | nindent 8 }}
       {{- end -}}
-{{ end }}
