--- a/dynatrace-operator/chart/default/values.yaml
+++ b/dynatrace-operator/chart/default/values.yaml
@@ -1,4 +1,4 @@
-# Copyright 2020 Dynatrace LLC
+# Copyright 2021 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -25,6 +25,9 @@ proxy: ""
 trustedCAs: ""
 networkZone: ""
 enableIstio: false
+
+# Only works for applicationMonitoring and cloudNativeFullStack
+namespaceSelector: {}
 
 autoCreateSecret: true
 apiToken: ""
@@ -58,7 +61,6 @@ cloudNativeFullStack:
   enabled: false
   version: ""
   initResources: {}
-  namespaceSelector: {}
   nodeSelector: ""
   tolerations: [ ]
   oneAgentResources: { }
@@ -75,7 +77,6 @@ applicationMonitoring:
   version: ""
   useCSIDriver: false
   initResources: {}
-  namespaceSelector: {}
 
 hostMonitoring:
   enabled: false
