--- a/dynatrace-operator/chart/default/templates/Common/csi/daemonset.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/csi/daemonset.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
-{{- if eq (include "dynatrace-operator.needCSI" .) "true" -}}
+{{ if eq (include "dynatrace-operator.needCSI" .) "true" }}
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
