Removes ocp311 from dynatrace-operator chart

--- a/dynatrace-operator/chart/default/values.yaml
+++ b/dynatrace-operator/chart/default/values.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# may be set to "kubernetes", "openshift", "openshift-3-11", "google"
+# may be set to "kubernetes", "openshift", "google"
 platform: "kubernetes"
 
 ### base properties
