--- a/dynatrace-operator/chart/default/templates/Common/activegate/serviceaccount-activegate.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/activegate/serviceaccount-activegate.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift, google, or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift, google" (include "dynatrace-operator.platformSet" .))}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
