--- a/dynatrace-operator/chart/default/templates/Common/customresource-dynakube.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/customresource-dynakube.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift, google, or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift, google" (include "dynatrace-operator.platformSet" .))}}
 {{- $modeSet := printf "%s" (required "Only one onagent mode can be used per dynakube." (include "dynatrace-operator.modeSet" .))}}
 {{- $activeGateModeSet := printf "%s" (required "Deprecated activeGate mode and the new activaGate mode can't be used at the same time." (include "dynatrace-operator.activeGateModeSet" .))}}
 {{- if .Values.apiUrl }}
