--- a/dynatrace-operator/chart/default/templates/Common/oneagent/serviceaccount-oneagent-unprivileged.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/oneagent/serviceaccount-oneagent-unprivileged.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{ $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
+{{ $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift" (include "dynatrace-operator.platformSet" .))}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -21,7 +21,7 @@ metadata:
   labels:
     {{ include "dynatrace-operator.labels" . | nindent 4 }}
 
-{{ if or (eq .Values.platform "openshift") (eq .Values.platform "openshift-3-11") }}
+{{ if eq .Values.platform "openshift"}}
 imagePullSecrets:
 - name: redhat-connect
 - name: redhat-connect-sso
