--- a/dynatrace-operator/chart/default/templates/Common/operator/clusterrole-operator.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/operator/clusterrole-operator.yaml
@@ -11,7 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift" (include "dynatrace-operator.platformSet" .))}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -59,7 +59,6 @@ rules:
     verbs:
       - create
       - patch
-  {{- if ne .Values.platform "openshift-3-11"}}
   - apiGroups:
       - admissionregistration.k8s.io
     resources:
@@ -110,4 +109,3 @@ rules:
     verbs:
       - list
       - watch
-  {{end}}
