--- a/dynatrace-operator/chart/default/templates/Common/webhook/rolebinding-webhook.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/webhook/rolebinding-webhook.yaml
@@ -11,8 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
-{{- if ne .Values.platform "openshift-3-11"}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift " (include "dynatrace-operator.platformSet" .))}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -28,4 +27,3 @@ roleRef:
   kind: Role
   name: dynatrace-webhook
   apiGroup: rbac.authorization.k8s.io
-{{end}}
