--- a/dynatrace-operator/chart/default/templates/Common/webhook/service.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/webhook/service.yaml
@@ -11,8 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
-{{- if ne .Values.platform "openshift-3-11"}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift " (include "dynatrace-operator.platformSet" .))}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -28,4 +27,3 @@ spec:
     - port: 443
       protocol: TCP
       targetPort: server-port
-{{end}}
