--- a/dynatrace-operator/chart/default/templates/Common/customresource-dynakube.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/customresource-dynakube.yaml
@@ -19,6 +19,10 @@
 apiVersion: dynatrace.com/v1beta1
 kind: DynaKube
 metadata:
+  annotations:
+    {{- if ne .Values.platform "google"}}
+    "helm.sh/hook": post-install,post-upgrade
+    {{ end }}
   name: {{ .Values.name }}
   namespace: {{ .Release.Namespace }}
   labels:
@@ -269,12 +273,10 @@ spec:
       {{- end }}
 
       {{ if .Values.oneAgent }} {{/* For compatibility between 0.2.3 and 0.3.0 */}}
-      autoUpdate: {{.Values.oneAgent.autoUpdate}}
-      {{ else if .Values.classicFullStack.autoUpdate }}
-      autoUpdate: {{.Values.classicFullStack.autoUpdate}}
+      autoUpdate: {{.Values.oneAgent.autoUpdate | default "false"}}
       {{ else }}
-      autoUpdate: false
-      {{ end }}
+      autoUpdate: {{.Values.classicFullStack.autoUpdate | default "false" }}
+      {{- end }}
 
       {{- if .Values.classicFullStack.dnsPolicy }}
       dnsPolicy: {{ .Values.classicFullStack.dnsPolicy }}
