Add repository ID to verify package

--- a/repos/stable/artifacthub-repo.yml
+++ b/repos/stable/artifacthub-repo.yml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+repositoryID: b0a4eac3-5980-4825-a4d7-77f116e2e6ab
 owners:
   - name: DTMad
     email: marco.mader@dynatrace.com
