Updates roles according to main repo

--- a/dynatrace-operator/chart/default/templates/Common/webhook/clusterrole-webhook.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/webhook/clusterrole-webhook.yaml
@@ -42,13 +42,45 @@ rules:
     verbs:
       - create
   - apiGroups:
-    - ""
+      - ""
     resources:
       - secrets
     resourceNames:
       - dynatrace-dynakube-config
+      - dynatrace-data-ingest-endpoint
     verbs:
       - get
       - list
       - watch
       - update
+  # data-ingest workload owner lookup
+  - apiGroups:
+      - ""
+    resources:
+      - replicationcontrollers
+    verbs:
+      - get
+  - apiGroups:
+      - apps
+    resources:
+      - replicasets
+      - statefulsets
+      - daemonsets
+      - deployments
+    verbs:
+      - get
+  - apiGroups:
+      - batch
+    resources:
+      - jobs
+      - cronjobs
+    verbs:
+      - get
+  - apiGroups:
+      - apps.openshift.io
+    resources:
+      - deploymentconfigs
+    verbs:
+      - get
+
+{{end}}
