--- a/dynatrace-operator/chart/default/tests/Common/kubernetes-monitoring/clusterrole-kubernetes-monitoring_test.yaml
+++ b/dynatrace-operator/chart/default/tests/Common/kubernetes-monitoring/clusterrole-kubernetes-monitoring_test.yaml
@@ -16,42 +16,77 @@ tests:
       - contains:
           path: rules
           content:
-              apiGroups:
-                - ""
-                - batch
-                - apps
-                - apps.openshift.io
-                - config.openshift.io
-              resources:
-                - nodes
-                - pods
-                - namespaces
-                - deployments
-                - replicasets
-                - deploymentconfigs
-                - replicationcontrollers
-                - jobs
-                - cronjobs
-                - statefulsets
-                - daemonsets
-                - events
-                - resourcequotas
-                - pods/proxy
-                - nodes/proxy
-                - services
-                - clusterversions
-              verbs:
-                - list
-                - watch
-                - get
+            apiGroups:
+              - ""
+            resources:
+              - nodes
+              - pods
+              - namespaces
+              - replicationcontrollers
+              - events
+              - resourcequotas
+              - pods/proxy
+              - nodes/proxy
+              - services
+            verbs:
+              - list
+              - watch
+              - get
       - contains:
           path: rules
           content:
-              nonResourceURLs:
-                - /metrics
-                - /version
-                - /readyz
-                - /healthz
-              verbs:
-                - get
-
+            apiGroups:
+              - batch
+            resources:
+              - jobs
+              - cronjobs
+            verbs:
+              - list
+              - watch
+              - get
+      - contains:
+          path: rules
+          content:
+            apiGroups:
+              - apps
+            resources:
+              - deployments
+              - replicasets
+              - statefulsets
+              - daemonsets
+            verbs:
+              - list
+              - watch
+              - get
+      - contains:
+          path: rules
+          content:
+            apiGroups:
+              - apps.openshift.io
+            resources:
+              - deploymentconfigs
+            verbs:
+              - list
+              - watch
+              - get
+      - contains:
+          path: rules
+          content:
+            apiGroups:
+              - config.openshift.io
+            resources:
+              - clusterversions
+            verbs:
+              - list
+              - watch
+              - get
+      - contains:
+          path: rules
+          content:
+            nonResourceURLs:
+              - /metrics
+              - /version
+              - /readyz
+              - /healthz
+            verbs:
+              - get
