--- a/dynatrace-operator/chart/default/tests/Common/webhook/deployment-webhook_test.yaml
+++ b/dynatrace-operator/chart/default/tests/Common/webhook/deployment-webhook_test.yaml
@@ -34,7 +34,7 @@ tests:
             template:
               metadata:
                 annotations:
-                  kubectl.kubernetes.io/default-logs-container: webhook
+                  kubectl.kubernetes.io/default-container: webhook
                 labels:
                   dynatrace.com/operator: oneagent
                   internal.dynatrace.com/component: webhook
