--- a/dynatrace-operator/chart/default/templates/Common/webhook/deployment-webhook.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/webhook/deployment-webhook.yaml
@@ -80,11 +80,11 @@ spec:
               containerPort: 8443
           resources:
             requests:
-              cpu: 300m
-              memory: 128Mi
+              cpu: {{ .Values.webhook.cpu.requests }}
+              memory: {{ .Values.webhook.memory.requests }}
             limits:
-              cpu: 300m
-              memory: 128Mi
+              cpu: {{ .Values.webhook.cpu.limits }}
+              memory: {{ .Values.webhook.memory.limits }}
       serviceAccountName: dynatrace-webhook
       {{- if .Values.operator.customPullSecret }}
       imagePullSecrets:
