Updates roles according to main repo (#162)

--- a/dynatrace-operator/chart/default/templates/Common/webhook/role-webhook.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/webhook/role-webhook.yaml
@@ -63,3 +63,10 @@ rules:
       - get
       - update
       - create
+  - apiGroups:
+      - apps
+    resources:
+      - daemonsets
+    verbs:
+      - list
+      - watch
